# doublegit

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.txt  README.md  README.rst  doublegit.py  gitarchive.py  setup.py  tests.py
.github/workflows/: test.yml
src/: browse.html  git.rs  index.html  lib.rs  main.rs  tests_integration.rs  web.rs
src/apis/: github.rs  mod.rs  recorder.rs  register.rs  registry.rs
src/git/: git.rs  mod.rs  tests_integration.rs
