[package]
name = "doublegit"
version = "0.1.0"
authors = ["Remi Rampin <r@remirampin.com>"]
description = "Version and backup a Git repository"
license = "MIT/Apache-2.0"
rust-version = "1.31"
edition = "2018"

[[bin]]
name = "doublegit"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = "2"
lazy_static = "1.3"
regex = "1.1"
rusqlite = "0.16"
log = "0.4"
env_logger = "0.6"
handlebars = {version = "2.0", optional = true}
http = {version = "0.1.18", optional = true}
hyper = {version = "0.14.5", optional = true}
percent-encoding = {version = "1.0", optional = true}
serde = {version = "1.0", optional = true, features = ["derive"]}
serde_json = {version = "1.0", optional = true}
warp = {version = "0.1.18", optional = true}

[dev-dependencies]
tempfile = "3.0.8"

[features]
default = ["web"]
web = ["handlebars", "http", "hyper", "percent-encoding", "serde", "serde_json", "warp"]
bundled-sqlite = ["rusqlite/bundled"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
